// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App should render correctly on API errors 1`] = `
<Fragment>
  <GlobalStyleComponent />
  <Header />
  <Search
    onChange={[Function]}
    valid={true}
  />
  <Results
    results={Array []}
  />
</Fragment>
`;

exports[`App should render correctly on invalid queries 1`] = `
<Fragment>
  <GlobalStyleComponent />
  <Header />
  <Search
    onChange={[Function]}
    valid={false}
  />
  <Results
    results={Array []}
  />
</Fragment>
`;

exports[`App should render correctly on valid queries 1`] = `
<Fragment>
  <GlobalStyleComponent />
  <Header />
  <Search
    onChange={[Function]}
    valid={true}
  />
  <Results
    results={Array []}
  />
</Fragment>
`;

exports[`App should render the correct error on 403  1`] = `
<Fragment>
  <GlobalStyleComponent />
  <Header />
  <Search
    onChange={[Function]}
    valid={true}
  />
  <Err
    msg="Oops. Rate limit exceeded"
  />
</Fragment>
`;

exports[`App should render the correct error on 404  1`] = `
<Fragment>
  <GlobalStyleComponent />
  <Header />
  <Search
    onChange={[Function]}
    valid={true}
  />
  <Err
    msg="Sorry, no results"
  />
</Fragment>
`;

exports[`App should render the correct error on 500  1`] = `
<Fragment>
  <GlobalStyleComponent />
  <Header />
  <Search
    onChange={[Function]}
    valid={true}
  />
  <Err
    msg="Oops. Server error"
  />
</Fragment>
`;

exports[`App should render without crashing 1`] = `
<Fragment>
  <GlobalStyleComponent />
  <Header />
  <Search
    onChange={[Function]}
    valid={true}
  />
  <Results
    results={Array []}
  />
</Fragment>
`;
